[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Objects/SmallTurnTile-export2.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/scripts/TurnTile.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/Flip2.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[node name="TurnTile" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Edge1" type="Area2D" parent="."]
position = Vector2( 8, 16 )
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Edge1"]
shape = SubResource( 1 )

[node name="Edge2" type="Area2D" parent="."]
position = Vector2( 16, 8 )
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Edge2"]
shape = SubResource( 1 )

[node name="Center" type="Area2D" parent="."]
position = Vector2( 8, 8 )
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Center"]
shape = SubResource( 1 )

[node name="Flip" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -5.943
bus = "SFX"
[connection signal="area_entered" from="Edge1" to="." method="_on_Edge1_area_entered"]
[connection signal="area_entered" from="Edge2" to="." method="_on_Edge2_area_entered"]
[connection signal="area_entered" from="Center" to="." method="_on_Center_area_entered"]
